# GameJam-Launcher-2026

./: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prettier.config.js
script/: compile.sh  count-votes.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/box/: BoxGame.tsx  BoxRating.tsx  BoxVote.tsx
src/components/header/: HeaderBar.tsx
src/components/input/: InputButton.tsx  InputControl.tsx  InputStars.tsx
src/components/popup/: PopupInformation.tsx  PopupOverlay.tsx  PopupVoteSuccess.tsx
src/data/: GameList.ts
src/pages/: _document.tsx  index.tsx  vote.tsx
src/styles/: globals.css
src/types/model/: Game.ts  Vote.ts
src/types/props/box/: BoxGameProps.ts  BoxRatingProps.ts  BoxVoteProps.ts
src/types/props/button/: InputButtonProps.ts
src/types/props/input/: InputButtonProps.ts  InputControlProps.ts  InputStarsProps.ts
src/types/props/popup/: PopupProps.ts
src/types/props/type/: GameProps.ts
