[package]
name = "gamejam-launcher-2026"
version = "1.0.0"
description = "The official launcher for the 2026 GameJam by 42 Luxembourg"
authors = ["Toujou Studios"]
license = "GPL 3.0"
repository = "https://github.com/IanToujou/GameJam-Launcher-2026"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
